シェア機能のハッシュタグ追加・パスワード未設定ユーザー対応・ヘルプ/利用規約/プライバシーポリシー改訂

--- a/app/views/book_sections/show.html.erb
+++ b/app/views/book_sections/show.html.erb
@@ -40,7 +40,7 @@
 
         <button type="button"
                 data-action="share#openTwitter"
-                data-text="<%= "#{@section.heading} を学習しました！ #RailsLearning" %>"
+                data-text="<%= "#{@section.heading} を学習しました！ #RailsLearning #Ruby #Rails" %>"
                 class="btn-dark">
           Xでシェア
         </button>
