--- a/app/views/pre_codes/show.html.erb
+++ b/app/views/pre_codes/show.html.erb
@@ -13,7 +13,7 @@
       data-share-url-value="<%= code_library_url(@pre_code) %>">
     <button type="button"
             data-action="share#openTwitter"
-            data-text="<%= "#{@pre_code.title} をシェア #RailsLearning" %>"
+            data-text="<%= "#{@pre_code.title} をシェア #RailsLearning #Ruby #Rails" %>"
             class="btn-dark">
       Xでシェア
     </button>
