--- a/app/views/quizzes/sections/result.html.erb
+++ b/app/views/quizzes/sections/result.html.erb
@@ -46,7 +46,7 @@
       data-share-url-value="<%= quizzes_url %>">
     <button type="button"
             data-action="share#openTwitter"
-            data-text="<%= "Rails Learning クイズで #{@correct}/#{@total} を獲得！ #RailsLearning" %>"
+            data-text="<%= "Rails Learning クイズで #{@correct}/#{@total} を獲得！ #RailsLearning #Ruby #Rails" %>"
             class="btn-dark">
       Xでシェア
     </button>
